Add jvm arguments